Video working in JavaMain and Manager Main