@@ -1,2 +1,2 @@
-java --module-path "D:\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml -jar JavaEat.jar 
+java --module-path "..\javafx-sdk-16\lib" --add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED -jar JavaEat.jar 
 PAUSE
